	* Removed run-time OT toggling support, OT is now fast, no need for that.
	* Renamed all of the intl_props->text_props (because it really changed purpose
	* Fixed spliting/merging of text_props to be fast and good, not hacky and complex like before.
	* Added "mirrored mode" to table object.

2011-02-07 Brett Nash (nash@nash.id.au)

        * Proxy Objects; Now you can set an image to have a 'source' of
        another object.  The proxy will display the object as well.  Proxy
        objects should be mostly complete.
        * Proxy objects should be complete; please report and bugs to me.
        * Partial support for arbitrary clipping.  Final support coming soon
        (with some other changes).  You can set most objects as a clip on
        other objects.  This will use the alpha channel of the object as a
        clip on the object.  This is still buggy.
        * Software support for arbitrary maps.  So you can use any size map
        (not just 4 points) for maps.  Once again this is a little buggy.

2011-02-02  Carsten Haitzler (The Rasterman)

        * GL engine gets a speculative texture cache to shadow the
          normal image cache to avoid excess texture uploads when
          cycling images often. Should improve performance in some
          cases.

2011-02-12  Carsten Haitzler (The Rasterman)

        * Fix "rediculous scaling size" bug, where scaling images to
          sizes like 1 billion pixels high or wide caused evas to try
          allocate scaletables on the stack and the stack just couldn't
          handle it. Now it only allocates a table for the visible
          region which will always be sane, and even has insanity
          checks now. At worst you'll get an unrendered image if the
          values are silly and some slowness. No crashes.